I added the index.html file and put a couple of lines in there

--- a/html_basic/base_index.html
+++ b/html_basic/base_index.html
@@ -3,9 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <title>Something nice</title>
 </head>
 <body>
-  
+  <h1>Introduction</h1>
+  <p>I am Benard</p>
+
+  <h2>School</h2>
+  <p>I study at ALX</p>
+  <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="The ALX logo">
+
+
+  <h3>Other Info:</h3>
+  <p>I am nice</p>
+  <p>I am sleep deprived</p>
 </body>
 </html>
