--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -1,11 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
-</head>
-<body>
-  
-</body>
+  <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Something nice</title>
+  </head>
+  <body>
+    <h1>Introduction</h1>
+    <p>I am Benard</p>
+
+    <h2>School</h2>
+    <p>I study at ALX</p>
+    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="The ALX logo">
+
+
+    <h3>Other Info:</h3>
+    <p>I am nice</p>
+    <p>I am sleep deprived</p>
+    <p>I am commited to coding</p>
+  </body>
 </html>
