--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -12,7 +12,7 @@
     <h2>School</h2>
     <p>I study at ALX</p>
     <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="The ALX logo">
-
+    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">ALX logo</a>
 
     <h3>Other Info:</h3>
     <p>I am nice</p>
