--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -6,17 +6,37 @@
     <title>Something nice</title>
   </head>
   <body>
-    <h1>Introduction</h1>
-    <p>I am Benard</p>
+    <header>
+      <h1>Introduction</h1>
+      <p>I am Benard</p> 
+      <ul>
+        <a href="index.html"><li>Best school: ALX</li></a>
+        <a href="base_index.html"><li>Best moment: now</li></a>
+      </ul>
+    </header>
 
-    <h2>School</h2>
-    <p>I study at ALX</p>
-    <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="The ALX logo">
-    <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">ALX logo</a>
+    <main>
+      <aside>
+        <p>placeholder</p>
+        placeholder
+      </aside>
 
-    <h3>Other Info:</h3>
-    <p>I am nice</p>
-    <p>I am sleep deprived</p>
-    <p>I am commited to coding</p>
+      <article>
+        <h2>School</h2>
+        <p>I study at ALX</p>
+        <img src="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png" alt="The ALX logo">
+        <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">ALX logo</a>
+      </article>
+
+      <h3>Other Info:</h3>
+      <p>I am nice</p>
+      <p>I am sleep deprived</p>
+      <p>I am commited to coding</p>
+    </main>
+
+    <footer>
+      <p>Made by Benard</p> - <a href="https://www.youtube.com/watch?v=YK-qCMZHi5Y" target="_blank">Current song</a>
+    </footer>
+
   </body>
 </html>
