--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -27,10 +27,41 @@
         <a href="https://i.ibb.co/gTDZZT8/ALX-Logo-07.png">ALX logo</a>
       </article>
 
-      <h3>Other Info:</h3>
-      <p>I am nice</p>
-      <p>I am sleep deprived</p>
-      <p>I am commited to coding</p>
+      <article>
+        <h3>Other Info:</h3>
+        <p>I am nice</p>
+        <p>I am sleep deprived</p>
+        <p>I am commited to coding</p>
+      </article>
+      <article>
+        <table>
+          <tr>
+            <th><strong>Name</strong></th>
+            <th><strong>Age</strong></th>
+            <th><strong>Country</strong></th>
+          </tr>
+          <tr>
+            <td>John</td>
+            <td>25</td>
+            <td>USA</td>
+          </tr>
+          <tr>
+            <td>Emily</td>
+            <td>28</td>
+            <td>Canda</td>
+          </tr>
+          <tr>
+            <td>Michael</td>
+            <td>32</td>
+            <td>Australia</td>
+          </tr>
+          <tr>
+            <td>Sophia</td>
+            <td>32</td>
+            <td>UK</td>
+          </tr>
+        </table>
+      </article>
     </main>
     <footer>
       <p>Made by Benard</p> - <a href="https://www.youtube.com/watch?v=YK-qCMZHi5Y" target="_blank">Current song</a>
