--- a/html_basic/index.html
+++ b/html_basic/index.html
@@ -35,31 +35,35 @@
       </article>
       <article>
         <table>
-          <tr>
-            <th><strong>Name</strong></th>
-            <th><strong>Age</strong></th>
-            <th><strong>Country</strong></th>
-          </tr>
-          <tr>
-            <td>John</td>
-            <td>25</td>
-            <td>USA</td>
-          </tr>
-          <tr>
-            <td>Emily</td>
-            <td>28</td>
-            <td>Canda</td>
-          </tr>
-          <tr>
-            <td>Michael</td>
-            <td>32</td>
-            <td>Australia</td>
-          </tr>
-          <tr>
-            <td>Sophia</td>
-            <td>32</td>
-            <td>UK</td>
-          </tr>
+          <thead>
+            <tr>
+              <th>Name</th>
+              <th>Age</th>
+              <th>Country</th>
+            </tr>
+          </thead>
+          <tbody>
+             <tr>
+              <td>John</td>
+              <td>25</td>
+              <td>USA</td>
+            </tr>
+            <tr>
+              <td>Emily</td>
+              <td>28</td>
+              <td>Canda</td>
+            </tr>
+            <tr>
+              <td>Michael</td>
+              <td>32</td>
+              <td>Australia</td>
+            </tr>
+            <tr>
+              <td>Sophia</td>
+              <td>32</td>
+              <td>UK</td>
+            </tr>
+          </tbody>         
         </table>
       </article>
     </main>
